--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hsc",
-  "title": "Hester Street Collective",
+  "title": "Hester Street Collaborative",
   "description": "Theme for hesterstreet.org",
   "version": "1.0.0",
   "homepage": "http://hesterstreet.org/",
